force-app/main/default/objects/Session__c/fields/Number_Confirmed_Speakers__c.field-meta.xml
<CustomField>
    <fullName>Number_Confirmed_Speakers__c</fullName>
    <label>Number Confirmed Speakers</label>
    <summaryFilterItems>
        <field>Session_Speaker__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Session_Speaker__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>