force-app/main/default/objects/Session__c/fields/Number_of_Speakers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Speakers__c</fullName>
    <label>Number of Speakers</label>
    <summaryForeignKey>Session_Speaker__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>